# TRIDENT

./: .envrc  .gitignore  .gitmodules  Makefile  pyproject.toml
docker/: Dockerfile  get_image_tag.sh
trident/patch_encoder_models/: load.py
